2006-12-04  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: Handle notes with the way that
	Legacy can produce Place/Address combinations

2006-12-03  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: improve tooltips
	* src/GrampsWidgets.py: tooltip support

2006-12-03  Brian Matherly  <brian@gramps-project.org>
	* src/plugins/NarrativeWeb.py: fix 0000595: Narrative web site, save to
	   tar.gz format causes cash

2006-12-02  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_RelationView.py: disable buttons when person is inactive
	* src/plugins/Check.py: remove duplicate children in a family

2006-12-02  Alex Roitman  <shura@gramps-project.org>
	* src/Filters/SideBar/*SidebarFilter.py: Busy cursor when filtering.
	* src/plugins/Check.py (check_repo_references): Add new check.

2006-12-01  Brian Matherly  <brian@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: comment out lsn_reset - it causes crashes.

2006-12-01  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/DataViews/_RelationView.py: Show buttons for reorder and add
	parents in case the toolbar is not visible.

2006-12-01  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/Check.py (fix_encoding): Fix mime type string.
	* src/Filters/Rules/_RuleUtils.py (loose_date_cmp): Compare
	textual dates.
	* src/Filters/Rules/_HasEventBase.py (apply): Do not match empty
	places. 
	* src/plugins/Rebuild.py (__init__): Proper progress indication.
	* src/ArgHandler.py (cl_action): Properly call CLI tool.
	* src/plugins/DumpGenderStats.py (__init__): Fix CLI mode.
	* src/PluginUtils/_Tool.py (cli_tool): Fix CLI tools.
	* src/plugins/Makefile.am (pkgdata_PYTHON): Ship new file.
	* src/plugins/RebuildRefMap.py: Add new plugin.
	* src/GrampsDb/_GrampsBSDDB.py (reindex_reference_map): Fix reindexing.
	* src/GrampsDb/_GrampsDbBase.py (reindex_reference_map): Add a
	placeholder method for anything other than BSDDB.

2006-11-30  A Costa  <agcosta@gis.net>