@@ -1,4 +1,5 @@
 2006-12-04  Don Allingham  <don@gramps-project.org>
+	* src/DataViews/_RelationView.py: fix reorder spouse sensitivity
 	* src/GrampsDb/_ReadGedcom.py: Handle notes with the way that
 	Legacy can produce Place/Address combinations
 
